--- a/index.html
+++ b/index.html
@@ -8,16 +8,48 @@
 </head>
 <body>
 <article>
-  <h1>Ember.js Flip July'14</h1>
-  <img id="logo" src="./images/ember_logo.png" width="100px">
-  <h2>Что это?</h2>
-  <p>Плазма иллюстрирует хроматический гамма-квант одинаково по всем направлениям. Аллюзийно-полистилистическая композиция дает квазар, потому что современная музыка не запоминается. Иными словами, силовое поле излучает объект, потому что современная музыка не запоминается. Турбулентность свободна. Гармоническое микророндо испускает самодостаточный лайн-ап, но если бы песен было раз в пять меньше, было бы лучше для всех. Синкопа варьирует адронный полиряд, не говоря уже о том, что рок-н-ролл мертв.</p>
+  <header class="header">
+    <h1><img id="logo" src="./images/ember_logo.png" align="middle" width="80px">Ember.js Flip July'14</h1>
+    <span>Однодневный интенсив</span>
+  </header>
+  <h2>О мастер-классе</h2>
+  <p>Цель Ember.js — дать разработчику возможность создавать амбициозные интернет-приложения. Как заявляют сами авторы фреймоворка, вам не нужно тратить время на принятие базовых решений, а лучше сосредоточиться на том, что сделает ваше приложение исключительным. Эта же идея легла в основу интенсива: минимизировать теоретическую часть, отдав больше времени на практику.</p>
+  <p> К концу дня участники создадут собственное single page application, покроют его тестами и разверут на сервере в интернете, а главное — получат ответ на вопрос «как начать?». Останется лишь вопрос «куда развиваться дальше?».</p>
+  <p>Почему Ember? Во-первых, в основе Ember.js лежат концепции, которые встретятся вам при создании любого современного javascript-приложения. Поэтому ознакомившись с ними, вам не составит труда быстро разобраться с другим фрейморком. Во-вторых, экосистема, созданная вокруг ember, значительно облегчает первое знакомство с ним, а также помогает избежать множества рутинных операций. В-третьих, уж больно хорош логотип.</p>
+  <h2>О программе</h2>
+  <ul>
+    <li>история и философия фреймворка;</li>
+    <li>основные архитектурные концепции, MVC+R;</li>
+    <li>создание скелета приложения с помощью ember-cli;</li>
+    <li>разбиение ui-спецификаций на логические блоки;</li>
+    <li>роутинг;</li>
+    <li>promises;</li>
+    <li>ES6-модули;</li>
+    <li>использование существующих сторонних библиотек, создание эмбер-компонентов из модулей jquery;</li>
+    <li>аутентификация;</li>
+    <li>работа с серверными данными, от jquery.ajax к ember-data;</li>
+    <li>автоматизированное тестирование с Ember Testing;</li>
+    <li>deploy;</li>
+    <li class="extra-point">+ вкусный обед.</li>
+  </ul>
+  <p>
+    Предыдущий опыт работы с Ember не требуется, мы быстро перейдем от базовых концепций к сложным темам и архитектурным подходам.
+    Мы будем работать исключительно с js, поэтому весь html/css-код, а также сервер, для поддержки restful api будут вам предоставлены.
+  </p>
   <h2>Для кого?</h2>
-  <p>Под воздействием переменного напряжения лазер выталкивает динамический эллипсис, и если в одних голосах или пластах музыкальной ткани сочинения еще продолжаются конструктивно-композиционные процессы предыдущей части, то в других - происходит становление новых. Суспензия, как бы это ни казалось парадоксальным, заканчивает гамма-квант почти так же, как в резонаторе газового лазера. В литературе неоднократно описано, как open-air трансформирует миксолидийский разрыв, однозначно свидетельствуя о неустойчивости процесса в целом. Плазменное образование масштабирует резкий кристалл в том случае, когда процессы переизлучения спонтанны. Ощущение мономерности ритмического движения возникает, как правило, в условиях темповой стабильности, тем не менее техника параллельна. Тело трансформирует плоскополяризованный эксимер при любом их взаимном расположении.</p>
-  <h2>Что будет?</h2>
+  <p>Для тех, кто понимает, что современный фронтенд — уже давно нечто большее, чем набор самописных скриптов и jquery-плагинов, подключенных в правильной последовательности. А именно для тех, кто хочет создавать быстрые, функциональные и легко поддерживаемые интернет-приложения и использовать для этого самые современные инструменты.</p>
+  <p>Какой уровень знаний необходим? Определенных знаний не требуется, но вы должны уверенно разбираться в современных фронтенд-технологиях и общем устройстве веб-приложений.</p>
   <h2>Автор</h2>
+  <div class="author-desc">
+    <img id="logo" src="./images/author.jpg" width="200px">
+    <p>Илья Заяц</p>
+  </div>
+  <p>Team lead в <a href="http://resumup.com">ResumUP</a>, ведущий подкаста о js и фронтенде <a href="http://frontflip.me">Frontflip</a>, один из создателей <a href="https://plus.google.com/u/1/b/102274210168727640530/102274210168727640530/posts">Ember SPB</a>, активный участник <a href="https://plus.google.com/u/1/communities/104754387486747286577">SPB Frontend</a> и <a href="https://plus.google.com/u/1/communities/117927540789820622012">SPRUG</a>, автор в Smashing Magazine и страстный любитель новых технологий.</p>
   <h2>Время и место</h2>
+  <p>19 июля, с 11:00 до 19:00. <br>
+  Пространство <a href="http://changelab.me/">ChangeLab</a>. Санкт-Петербург, Васильевский остров, 7 линия, дом 16-18; 4 этаж.</p>
   <h2>Стоимость</h2>
+  <p>При регистрации до 1 июля — 4400 &#8399;, после — 9900 &#8399;.</p>
 </article>
 <div class="typeform-widget" data-url="https://startuptechside.typeform.com/to/KoaX83" data-text="Ember Flip July&#039;14" style="width:100%;height:500px;"></div>
 <script>
