--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Ember.js Flip July'14</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
   <link href="./styles/normalize.css" rel="stylesheet" />
+  <link href="./styles/fira.css" rel="stylesheet" />
   <link href="./styles/style.css" rel="stylesheet" />
 </head>
 <body>
