--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <p>19 июля, с 11:00 до 19:00. <br>
   Пространство <a href="http://changelab.me/">ChangeLab</a>. Санкт-Петербург, Васильевский остров, 7 линия, дом 16-18; 4 этаж.</p>
   <h2>Стоимость</h2>
-  <p>При регистрации до 1 июля — 4400 &#8399;, после — 9900 &#8399;.</p>
+  <p>При регистрации до 1 июля — 4400 ₽, после — 9900 ₽.</p>
 </article>
 <div class="typeform-widget" data-url="https://startuptechside.typeform.com/to/KoaX83" data-text="Ember Flip July&#039;14" style="width:100%;height:500px;"></div>
 <script>
