more small scr optimizations

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <p>Какой уровень знаний необходим? Определенных знаний не требуется, но вы должны уверенно разбираться в современных фронтенд-технологиях и общем устройстве веб-приложений.</p>
   <h2>Автор</h2>
   <div class="author-desc">
-    <img id="logo" src="./images/author.jpg" width="200px">
+    <img src="./images/author.jpg" width="200px">
     <p>Илья Заяц</p>
   </div>
   <p>Team lead в <a href="http://resumup.com">ResumUP</a>, ведущий подкаста о js и фронтенде <a href="http://frontflip.me">Frontflip</a>, один из создателей <a href="https://plus.google.com/u/1/b/102274210168727640530/102274210168727640530/posts">Ember SPB</a>, активный участник <a href="https://plus.google.com/u/1/communities/104754387486747286577">SPB Frontend</a> и <a href="https://plus.google.com/u/1/communities/117927540789820622012">SPRUG</a>, автор в Smashing Magazine и страстный любитель новых технологий.</p>
