--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <span>Однодневный интенсив</span>
   </header>
   <h2>О мастер-классе</h2>
-  <p>Цель Ember.js — дать разработчику возможность создавать амбициозные интернет-приложения. Как заявляют сами авторы фреймоворка, вам не нужно тратить время на принятие базовых решений, а лучше сосредоточиться на том, что сделает ваше приложение исключительным. Эта же идея легла в основу интенсива: минимизировать теоретическую часть, отдав больше времени на практику.</p>
-  <p> К концу дня участники создадут собственное single page application, покроют его тестами и разверут на сервере в интернете, а главное — получат ответ на вопрос «как начать?». Останется лишь вопрос «куда развиваться дальше?».</p>
-  <p>Почему Ember? Во-первых, в основе Ember.js лежат концепции, которые встретятся вам при создании любого современного javascript-приложения. Поэтому ознакомившись с ними, вам не составит труда быстро разобраться с другим фрейморком. Во-вторых, экосистема, созданная вокруг ember, значительно облегчает первое знакомство с ним, а также помогает избежать множества рутинных операций. В-третьих, уж больно хорош логотип.</p>
+  <p>Цель Ember.js — дать разработчику возможность создавать амбициозные интернет-приложения. Как заявляют сами авторы фреймворка, вам не нужно тратить время на принятие базовых решений, а лучше сосредоточиться на том, что сделает ваше приложение исключительным. Эта же идея легла в основу интенсива: минимизировать теоретическую часть, отдав больше времени на практику.</p>
+  <p>К концу дня участники создадут собственное single page application, покроют его тестами и развернут на сервере в интернете, а главное — получат ответ на вопрос «как начать?». Останется лишь вопрос «куда развиваться дальше?».</p>
+  <p>Почему Ember? Во-первых, в основе Ember.js лежат концепции, которые встретятся вам при создании любого современного javascript-приложения. Поэтому ознакомившись с ними, вам не составит труда быстро разобраться с другим фреймворком. Во-вторых, экосистема, созданная вокруг Ember, значительно облегчает первое знакомство с ним, а также помогает избежать множества рутинных операций. В-третьих, уж больно хорош логотип.</p>
   <h2>О программе</h2>
   <ul>
     <li>история и философия фреймворка;</li>
