small content fixes

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 <article>
   <header class="header">
     <h1><img id="logo" src="./images/ember_logo.png" align="middle" width="80px">Ember.js Flip July'14</h1>
-    <span>Однодневный интенсив</span>
+    <p class="summary">Однодневный интенсив</p>
+    <p class="summary">19 июля, 11:00, пространство <a href="http://changelab.me/">Changelab</a></p>
   </header>
   <h2>О мастер-классе</h2>
   <p>Цель Ember.js — дать разработчику возможность создавать амбициозные интернет-приложения. Как заявляют сами авторы фреймворка, вам не нужно тратить время на принятие базовых решений, а лучше сосредоточиться на том, что сделает ваше приложение исключительным. Эта же идея легла в основу интенсива: минимизировать теоретическую часть, отдав больше времени на практику.</p>
-  <p>К концу дня участники создадут собственное single page application, покроют его тестами и развернут на сервере в интернете, а главное — получат ответ на вопрос «как начать?». Останется лишь вопрос «куда развиваться дальше?».</p>
+  <p>К концу дня участники создадут собственное single page application, покроют его тестами и развернут на сервере в интернете, а главное — получат ответ на вопрос «как начать?». Останется лишь вопрос «куда развиваться дальше?». Отдельное внимание будет уделено вопросу миграции существующего legacy-кода небольшими итерациями без массового переписывания с 0.</p>
   <p>Почему Ember? Во-первых, в основе Ember.js лежат концепции, которые встретятся вам при создании любого современного javascript-приложения. Поэтому ознакомившись с ними, вам не составит труда быстро разобраться с другим фреймворком. Во-вторых, экосистема, созданная вокруг Ember, значительно облегчает первое знакомство с ним, а также помогает избежать множества рутинных операций. В-третьих, уж больно хорош логотип.</p>
   <h2>О программе</h2>
   <ul>
     <li>история и философия фреймворка;</li>
     <li>основные архитектурные концепции, MVC+R;</li>
+    <li>пример быстрой миграции jquery powered формы на Ember;</li>
     <li>создание скелета приложения с помощью ember-cli;</li>
     <li>разбиение ui-спецификаций на логические блоки;</li>
     <li>роутинг;</li>
@@ -40,12 +42,15 @@
   <h2>Для кого?</h2>
   <p>Для тех, кто понимает, что современный фронтенд — уже давно нечто большее, чем набор самописных скриптов и jquery-плагинов, подключенных в правильной последовательности. А именно для тех, кто хочет создавать быстрые, функциональные и легко поддерживаемые интернет-приложения и использовать для этого самые современные инструменты.</p>
   <p>Какой уровень знаний необходим? Определенных знаний не требуется, но вы должны уверенно разбираться в современных фронтенд-технологиях и общем устройстве веб-приложений.</p>
+  <p>Так же вам потребуется свой ноутбук. ОС не имеет значения. Для экономии времени желательно предустановить <a href="http://nodejs.org/">nodejs</a>.</p>
   <h2>Автор</h2>
   <div class="author-desc">
     <img src="./images/author.jpg" width="200px">
     <p>Илья Заяц</p>
   </div>
   <p>Team lead в <a href="http://resumup.com">ResumUP</a>, ведущий подкаста о js и фронтенде <a href="http://frontflip.me">Frontflip</a>, один из создателей <a href="https://plus.google.com/u/1/b/102274210168727640530/102274210168727640530/posts">Ember SPB</a>, активный участник <a href="https://plus.google.com/u/1/communities/104754387486747286577">SPB Frontend</a> и <a href="https://plus.google.com/u/1/communities/117927540789820622012">SPRUG</a>, автор в Smashing Magazine и страстный любитель новых технологий.</p>
+
+  <p><a href="mailto:somebody32@gmail.com">Написать автору</a></p>
   <h2>Время и место</h2>
   <p>19 июля, с 11:00 до 19:00. <br>
   Пространство <a href="http://changelab.me/">ChangeLab</a>. Санкт-Петербург, Васильевский остров, 7 линия, дом 16-18; 4 этаж.</p>
