--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </header>
   <h2>О мастер-классе</h2>
   <p>Цель Ember.js — дать разработчику возможность создавать амбициозные интернет-приложения. Как заявляют сами авторы фреймворка, вам не нужно тратить время на принятие базовых решений, а лучше сосредоточиться на том, что сделает ваше приложение исключительным. Эта же идея легла в основу интенсива: минимизировать теоретическую часть, отдав больше времени на практику.</p>
-  <p>К концу дня участники создадут собственное single page application, покроют его тестами и развернут на сервере в интернете, а главное — получат ответ на вопрос «как начать?». Останется лишь вопрос «куда развиваться дальше?». Отдельное внимание будет уделено вопросу миграции существующего legacy-кода небольшими итерациями без массового переписывания с 0.</p>
+  <p>К концу дня участники создадут собственное single page application, покроют его тестами и развернут на сервере в интернете, а главное — получат ответ на вопрос «как начать?». Останется лишь вопрос «куда развиваться дальше?». Отдельное внимание будет уделено вопросу миграции существующего legacy-кода небольшими итерациями без массового переписывания с нуля.</p>
   <p>Почему Ember? Во-первых, в основе Ember.js лежат концепции, которые встретятся вам при создании любого современного javascript-приложения. Поэтому ознакомившись с ними, вам не составит труда быстро разобраться с другим фреймворком. Во-вторых, экосистема, созданная вокруг Ember, значительно облегчает первое знакомство с ним, а также помогает избежать множества рутинных операций. В-третьих, уж больно хорош логотип.</p>
   <h2>О программе</h2>
   <ul>
@@ -42,7 +42,7 @@
   <h2>Для кого?</h2>
   <p>Для тех, кто понимает, что современный фронтенд — уже давно нечто большее, чем набор самописных скриптов и jquery-плагинов, подключенных в правильной последовательности. А именно для тех, кто хочет создавать быстрые, функциональные и легко поддерживаемые интернет-приложения и использовать для этого самые современные инструменты.</p>
   <p>Какой уровень знаний необходим? Определенных знаний не требуется, но вы должны уверенно разбираться в современных фронтенд-технологиях и общем устройстве веб-приложений.</p>
-  <p>Так же вам потребуется свой ноутбук. ОС не имеет значения. Для экономии времени желательно предустановить <a href="http://nodejs.org/">nodejs</a>.</p>
+  <p>Также вам потребуется свой ноутбук. ОС не имеет значения. Для экономии времени желательно предустановить <a href="http://nodejs.org/">nodejs</a>.</p>
   <h2>Автор</h2>
   <div class="author-desc">
     <img src="./images/author.jpg" width="200px">
