--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
   <p>19 июля, с 11:00 до 19:00. <br>
   Пространство <a href="http://changelab.me/">ChangeLab</a>. Санкт-Петербург, Васильевский остров, 7 линия, дом 16-18; 4 этаж.</p>
   <h2>Стоимость</h2>
-  <p>При регистрации до 1 июля — 4400 <span class="rub">Р</span>, после — 9900 <span class="rub">Р</span>.</p>
-  <p>Максимальное количество участников — 15.</p>
+  <p>
+    При регистрации до 1 июля — 4400 <span class="rub">Р</span>, после — 9900 <span class="rub">Р</span>.<br>
+    Максимальное количество участников — 15.
+  </p>
 </article>
 <div class="typeform-widget" data-url="https://startuptechside.typeform.com/to/KoaX83" data-text="Ember Flip July&#039;14" style="width:100%;height:500px;"></div>
 <script>
