--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   Пространство <a href="http://changelab.me/">ChangeLab</a>. Санкт-Петербург, Васильевский остров, 7 линия, дом 16-18; 4 этаж.</p>
   <h2>Стоимость</h2>
   <p>
-    При регистрации до 1 июля — 4400 <span class="rub">Р</span>, после — 9900 <span class="rub">Р</span>.<br>
+    При регистрации <span class="not-possible">до 1 июля — 4400 <span class="rub">Р</span></span>, после — 9900 <span class="rub">Р</span>.<br>
     Максимальное количество участников — 15.
   </p>
 </article>
